<resources>
    <string name="app_name">YTStreamer</string>
    <string name="thumb">thumb</string>
    <string name="none">none</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="search">Search</string>
    <string name="open_in_github">Open in GitHub</string>
    <string name="_0_0">0.00</string>
    <string name="title_activity_video_list">VideoList</string>
    <string name="action_settings">Settings</string>
    <string name="uploader">uploader</string>
    <string name="views">views</string>
    <string name="time">time</string>
    <string name="nointernet">Please connect to internet</string>
    <string name="show_lyrics">Google Lyrics</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="songs_list">Search Results</string>
    <string name="downloads">Downloads</string>
    <string name="player">Local Songs</string>
    <string name="update">Update</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_downloads">DownloadsAct</string>
    <string name="search_in_youtube">Search in YouTube</string>
    <string name="player_settings">Player Settings</string>
    <string name="set_looping">Set looping</string>
    <string name="lyrics_settings">Lyrics Settings</string>
    <string name="open_in_youtube">Open in YouTube</string>
    <string name="download">Download</string>
    <string name="title_activity_lyrics">Lyrics</string>
    <string name="about">About</string>

    <string name="lyrics">lyrics</string>
    <string name="load_yt_songs_list">Show YT songs list</string>
    <string name="show_website_list">Show website list</string>
    <string name="show_lyrics_in">Show lyrics in</string>
    <string name="download_settings">Download Settings</string>
    <string name="set_download_path">Set download path</string>
    <string name="notify_me_after">Notify me after downloading</string>
    <string name="each_song">Each song</string>
    <string name="whole_list">Complete list</string>
    <string name="local_song_settings">Local Song Settings</string>
    <string name="search_settings">Search Settings</string>
    <string name="include_in_search_ori">Include in search</string>
    <string name="local_songs">Local songs</string>
    <string name="yt_songs">YT Songs</string>
    <string name="include_in_search">Include in search</string>
    <string name="show_video_list">Show video list</string>
    <string name="title_activity_developer_contact">DeveloperContact</string>
    <string name="set_custom_keywords">Set custom keywords</string>
    <string name="auto_download_recommended">Auto download</string>
    <string name="auto_generate_title">Auto generate title (recommended)</string>
    <string name="complete_list">Complete list</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">FaceBook</string>
    <string name="e_mail">G Mail</string>
    <string name="linkedin">LinkedIn</string>
    <string name="youtube">YouTube</string>
    <string name="playlists">PlayLists</string>
    <string name="title">Title</string>
    <string name="add_playlist">add_playlist</string>
    <string name="edit_name">Change name</string>
    <string name="delete">Delete</string>
    <string name="add_song">Add to playlists</string>
    <string name="add_local_songs">Add local songs</string>
    <string name="add">ADD</string>
    <string name="shuffle">Shuffle</string>
    <string name="alphabetical_order">Alphabetical order</string>
    <string name="playlist_settings">PlayList Settings</string>
    <string name="auto_shuffle">Auto shuffle</string>

</resources>