<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".DeveloperContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:id="@+id/instagram"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/instagram"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="fill"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/facebook"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/facebook"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:gravity="fill"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/linked_in"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/linked_in"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/linkedin"
                android:textSize="30sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:gravity="fill"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/gmail"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gmail"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/e_mail"
                android:textSize="30sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:gravity="fill"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/youtube"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/youtube"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/youtube"
                android:textSize="30sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:gravity="fill"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>