<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/video_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/thumb_search"
        android:src="@drawable/yt"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:gravity="fill"
                android:maxLines="3"
                android:text="@string/none"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/menu_popup"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:src="@drawable/dot"
                android:contentDescription="@string/none" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/round"
                android:id="@+id/uploader_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                android:id="@+id/channel"
                android:maxLines="1"
                android:gravity="center"
                android:text="@string/uploader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/views"
                android:maxLines="1"
                android:text="@string/views" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:id="@+id/time"
                android:maxLines="1"
                android:text="@string/time" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

</LinearLayout>